# ergogen-switch-placer

./: LICENSE  README.md  mise.toml  pyproject.toml
kicad-plugin/: action.py  plugin.json
plugins/: action.py  requirements.txt
src/ergogen_key_placer/: place_footprints.py
tests/: test_place_footprints.py  test_plugin_action.py
tests/fixtures/: points.json
